--- a/contact.html
+++ b/contact.html
@@ -1,16 +1,28 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="stylesheet" type="text/css" href="style.css">
+	<link rel="stylesheet" type="text/css" href="contact.css">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<title>Horses on Death Row</title>
 </head>
+
 <body>
 	<nav class="nav" id="navbar">
 		<a href=""><h2>ABOUT</h2></a>
 		<a href=""><h2>DONATE</h2></a>
-		<a href=""><h2>PLACEHOLDER</h2></a>
-	</nav>
+    <a href=""><h2>CONTACT</h2></a>
+  </nav>
+  
+  <div class="main">
+    <ul>
+      <li>First Name</li>
+      <li>Last Name</li>
+      <li>Email</li>
+      <li>Subject</li>
+      <li>Text Box</li>
+    </ul>
+    <button type="submit">Submit</button>
+  </div>
 
 </body>
 </html>
