--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<nav class="nav" id="navbar">
 		<a href=""><h2>ABOUT</h2></a>
 		<a href=""><h2>DONATE</h2></a>
-		<a href=""><h2>PLACEHOLDER</h2></a>
+		<a href=""><h2>CONTACT</h2></a>
 	</nav>
 
 </body>
