form for donations

--- a/index.html
+++ b/index.html
@@ -11,6 +11,24 @@
 		<a href=""><h2>DONATE</h2></a>
 		<a href=""><h2>PLACEHOLDER</h2></a>
 	</nav>
+	<section>
+	<form>
+	<p style="color: red">Make a donation today to help homeless and abandoned horses!</p>
+	First Name:<br>
+	<input type = "text" name ="firstname"><br>
+	Last Name:<br>
+	<input type ="text" name="lastname"> <br>		
+	Email:<br>
+	<input type = "text" name="email"><br>
+	Name on Card:<br>
+	<input type = "text" name="cardname"><br>
+	Security code:<br>
+	<input type = "number" name="securitycode"><br>
+	Amount:<br>
+	<input type ="text" name="amount"><br>
+	<input type="submit" value="Submit">	
+		</form>
 
+	</section>
 </body>
 </html>
