Added beginning stages of contact page

--- a/contact.html
+++ b/contact.html
@@ -13,15 +13,20 @@
     <a href=""><h2>CONTACT</h2></a>
   </nav>
   
-  <div class="main">
-    <ul>
-      <li>First Name</li>
-      <li>Last Name</li>
-      <li>Email</li>
-      <li>Subject</li>
-      <li>Text Box</li>
-    </ul>
-    <button type="submit">Submit</button>
+  <div class="contact-form">
+    <h1>Contact Us!</h1>
+    <p>Hit us with any questions or thoughts:</p>
+    <form>
+      <div class="f_name">
+          <h2>First Name:</h2>
+          <input type="text">
+      </div>
+      <div class="l_name">
+        <h2>Last Name: </h2>
+        <input type="text" name="fname">
+      </div>
+      <button type="submit">Submit</button>
+    </form>
   </div>
 
 </body>
