--- a/contact.html
+++ b/contact.html
@@ -17,13 +17,22 @@
     <h1>Contact Us!</h1>
     <p>Hit us with any questions or thoughts:</p>
     <form>
-      <div class="f_name">
-          <h2>First Name:</h2>
-          <input type="text">
-      </div>
-      <div class="l_name">
-        <h2>Last Name: </h2>
-        <input type="text" name="fname">
+      <div class="Inputs">
+        <label for="first_name">
+          First Name <input type="text" id="first_name" placeholder="First Name"/>
+        </label> 
+        <label for="last_name">
+          Last Name <input type="text" id="last_name" name="fname" placeholder="Last Name"/>
+        </label>
+        <label for="email">
+          Email <input type="text" id="email" name="fname" placeholder="Email"/>
+        </label>
+        <label for="Subject">
+          Subject <input type="text" id="email" name="fname" placeholder="Last Name"/>
+        </label>
+        <label for="message">
+          Message <textarea rows="5" cols="10" id="message" placeholder="Enter message here: "></textarea>
+        </label>
       </div>
       <button type="submit">Submit</button>
     </form>
