--- a/Louisindex.html
+++ b/Louisindex.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 	<link rel="stylesheet" type="text/css" href="Louisstyle.css">
+	<link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 	<title>Horses on Death Row</title>
 </head>
@@ -11,41 +12,40 @@
 		<a href=""><h2>DONATE</h2></a>
 		<a href=""><h2>PLACEHOLDER</h2></a>
 	</nav>
-	<section>
-	<form>
-	<div style ="background-color: burlywood">	
-	<p style="color: white">Make a donation today to help homeless and abandoned horses and receive a free gift!</p>
-	</div>
-	<div class="row">
-		<div class="col-75">
-		  <div class="container">
-			<form action="/action_page.php">
-	  
-			  <div class="row">
-				<div class="col-50">
-				  <h3>Billing Address</h3>
-				  <label for="fname"><i class="fa fa-user"></i> Full Name</label>
-				  <input type="text" id="fname" name="firstname" placeholder="John M. Doe">
-				  <label for="email"><i class="fa fa-envelope"></i> Email</label>
-				  <input type="text" id="email" name="email" placeholder="john@example.com">
-				  <label for="adr"><i class="fa fa-address-card-o"></i> Address</label>
-				  <input type="text" id="adr" name="address" placeholder="542 W. 15th Street">
-				  <label for="city"><i class="fa fa-institution"></i> City</label>
-				  <input type="text" id="city" name="city" placeholder="New York">
-	  
-				  <div class="row">
-					<div class="col-50">
-					  <label for="state">State</label>
-					  <input type="text" id="state" name="state" placeholder="NY">
-					</div>
-					<div class="col-50">
-					  <label for="zip">Zip</label>
-					  <input type="text" id="zip" name="zip" placeholder="10001">
-					</div>
-				  </div>
-				</div>
-	  
-				<div class="col-50">
+	<div class ="center">	
+			<form>
+			<div style ="background-color: burlywood">	
+			<div class="atext">	
+				<p style="color: white">Make a donation today to help homeless and abandoned horses and receive a free gift!</p>
+			</div>	
+			</div>
+				<div class="row">
+					<div class="col-75">
+		  			<div class="container">
+							<form action="/action_page.php">	  
+			  				<div class="row">
+									<div class="col-50">
+				  				<h3>Billing Address</h3>
+				  				<label for="fname"><i class="fa fa-user"></i> Full Name</label>
+				  				<input type="text" id="fname" name="firstname" placeholder="John M. Doe">
+				  				<label for="email"><i class="fa fa-envelope"></i> Email</label>
+				  				<input type="text" id="email" name="email" placeholder="john@example.com">
+				  				<label for="adr"><i class="fa fa-address-card-o"></i> Address</label>
+				  				<input type="text" id="adr" name="address" placeholder="542 W. 15th Street">
+				  				<label for="city"><i class="fa fa-institution"></i> City</label>
+				  				<input type="text" id="city" name="city" placeholder="New York">	  
+				  				<div class="row">
+										<div class="col-50">
+										<label for="state">State</label>
+										<input type="text" id="state" name="state" placeholder="NY">
+									</div>
+									<div class="col-50">
+									<label for="zip">Zip</label>
+									<input type="text" id="zip" name="zip" placeholder="10001">
+									</div>
+									</div>
+							</div>
+	  							<div class="col-50">
 				  <h3>Payment</h3>
 				  <label for="fname">Accepted Cards</label>
 				  <div class="icon-container">
@@ -65,6 +65,8 @@
 					<div class="col-50">
 					  <label for="expyear">Exp Year</label>
 					  <input type="text" id="expyear" name="expyear" placeholder="2019">
+					 Donation Amount:<br>			 
+					$<input type ="number" name="amount" placeholder="5.00"><br>
 					</div>
 					<div class="col-50">
 					  <label for="cvv">CVV</label>
@@ -72,20 +74,24 @@
 					</div>
 				  </div>
 				</div>
-	  
 			  </div>
 			  <label>
-				<input type="checkbox" checked="checked" name="sameadr"> Shipping address same as billing
+			  <input type="checkbox" checked="checked" name="sameadr"> Shipping address same as billing
 			  </label>
 			  <input type="submit" value="Continue to checkout" class="btn">
 			</form>
 		  </div>
 		</div>
+		
 	  
 		
 		
 </form>
 
-	</section>
+</div>
+
+
+	 
 </body>
+
 </html>
