--- a/about.html
+++ b/about.html
@@ -8,19 +8,23 @@
 </head>
 <body>
 	<nav class="nav" id="navbar">
-		<a href=""><h2>ABOUT</h2></a>
-		<a href=""><h2>DONATE</h2></a>
-		<a href=""><h2>PLACEHOLDER</h2></a>
+		<a href="about.html"><h2>ABOUT</h2></a>
+		<a href="Louisindex.html"><h2>DONATE</h2></a>
+		<a href="contact.html"><h2>CONTACT</h2></a>
 	</nav>
 
 	<div class="center-text">
 		<h1>Horses on Death Row</h1>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-		<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+		<p>Driven by a deep passion for animals, Jodie Richers founded Dogs on Death Row in 2007, followed by Cats on Death Row, and now Horses On Death Row. Having worked in the nonprofit arena for many years as the director for One Child At A Time (an international aid and adoption organization), and also as a board member for Children's Charities of America, Jodie posesses a skill set ideal for leveraging dollars into the most efficient action possible to save the greatest number of horses.
+
+​
+
+		Jodie is tireless in her efforts to rescue, rehabilitate, and find homes for unwanted dogs, cats and horses everywhere. She is also committed to educating the public about the inhumane nature of gassing and heart prick as a means of killing animals.
+
+​
+
+		Although Jodie is the heart of this and many other animal charities, many people contribute their time, talent, and treasure to keep us going. We hope that you, too, will become a valued Horses On Death Row supporter and friend.</p>
+		
 	</div>
 
 </body>
